# fastf1-oracleconverged

./: .env.example  README.md  main.py  pyproject.toml
sql/: 10_views.sql
src/: 00_env_check.py  10_export_f1_data.py  10_run_export.py  20_load_oracle.py  30_build_embeddings.py  40_run_use_cases.py  50_visualizations.py  __init__.py
